# healthcare_analysis_platform

./: Cargo.toml  config.yaml  docker-compose.yaml
src/: main.rs
src/api/: config.rs  mod.rs  patient.rs
src/cfg/: config.rs  parse.rs
src/db/: mod.rs  surreal.rs
src/model/: disease.rs  entity.rs  expense.rs  institution.rs  mod.rs  patient.rs  visit.rs
src/repository/: generic_repo.rs  mod.rs  repo.rs
src/service/: generic_service.rs  mod.rs  patient_service.rs
