[package]
name = "healthcare_analysis_platform"
version = "0.1.0"
edition = "2021"

[dependencies]
surrealdb = "2.0.1"  # Replace with the latest version
axum = "0.7.6"
tokio = { version = "1", features = ["full"] }
csv = "1.1"        # For CSV parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1.0" # For JSON handling
serde_yaml = "0.8"
uuid = { version = "0.8", features = ["v4"] }